--- a/car-web/src/app/app.component.scss
+++ b/car-web/src/app/app.component.scss
@@ -14,6 +14,7 @@
 }
 
 .menu-sidebar {
+  background: #282e2f !important;
   position: relative;
   z-index: 10;
   min-height: 100vh;
@@ -38,7 +39,7 @@
   padding-left: 24px;
   overflow: hidden;
   line-height: 64px;
-  background: #007090;
+  background: #282e2f !important;
   transition: all .3s;
 }
 
@@ -51,7 +52,7 @@
 
 .sidebar-logo h1 {
   display: inline-block;
-  margin: 0 0 0 20px;
+  margin: 0 0 0 6px;
   color: #fff;
   font-weight: 600;
   font-size: 14px;
@@ -108,6 +109,9 @@ nz-content {
   text-align: center;
   padding: 16px 16px;
   overflow-wrap: break-word;
+}
+::ng-deep.ant-menu-dark .ant-menu-inline.ant-menu-sub {
+  background: #282e2f;
 }
 ::ng-deep .app-header {
   position: relative;
