--- a/car-web/src/app/pages/client-management/client-management.component.html
+++ b/car-web/src/app/pages/client-management/client-management.component.html
@@ -1,27 +1,26 @@
-<button nz-button nzType="primary" (click)="showModal(null)">New Client</button>
+<button nz-button nzType="primary" (click)="showModal(null)">Nouveau Client</button>
 <br>
 <nz-table #basicTable [nzData]="listOfData">
   <thead>
   <tr>
-    <th>ID</th>
-    <th>Full Name</th>
-    <th>Email</th>
-    <th>Company Name</th>
-    <th>Role</th>
-    <th>Creation date</th>
-    <th>Active</th>
-    <th>Actions</th>
+    <th>Nom de Client</th>
+    <th>CIN</th>
+    <th>N¨ Telephone</th>
+    <th>Date Debut</th>
+    <th>Date Fin</th>
+    <th>Nombre de jours</th>
+    <th>Prix</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let data of basicTable.data">
     <td>{{ data.id }}</td>
-    <td>{{ data.fullName }}</td>
-    <td>{{ data.email }}</td>
-    <td>{{ data.companyName }}</td>
-    <td>{{ data.role }}</td>
-    <td>{{ data.createDate | date: "dd-mm-yyyy" }}</td>
-    <td>{{ data.active }}</td>
+    <td>{{ data.name }}</td>
+    <td>{{ data.tel }}</td>
+    <td>{{ data.dateDebut | date: "dd-mm-yyyy HH:MM" }}</td>
+    <td>{{ data.dateFin | date: "dd-mm-yyyy HH:MM"}}</td>
+    <td>{{ data.numberDay  }}</td>
+    <td>{{ data.total }}</td>
     <td>
       <button nz-button nzType="primary" [nzSize]="'small'"><i nz-icon nzType="eye"></i></button>
       &nbsp;
@@ -38,82 +37,54 @@
 
   <form nz-form [formGroup]="validateForm" >
     <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="The input is not valid E-mail!">
-        <input nz-input formControlName="email" id="email" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label   [nzSm]="6" [nzXs]="24" nzFor="pw" nzRequired>Password</nz-form-label>
-      <nz-form-control  [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your password!">
-        <nz-input-group [nzSuffix]="suffixTemplate">
-          <input [type]="passwordVisible ? 'text' : 'password'"  nz-input placeholder="input password" type="password" id="pw"
-                 formControlName="pw" (ngModelChange)="updateConfirmValidator()" />
-        </nz-input-group>
-      </nz-form-control>
-      <ng-template #suffixTemplate>
-        <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>
-      </ng-template>
-    </nz-form-item>
-
-    <!--    <nz-input-group [nzSuffix]="suffixTemplate">-->
-    <!--      <input [type]="passwordVisible ? 'text' : 'password'" nz-input placeholder="input password" [(ngModel)]="password" />-->
-    <!--    </nz-input-group>-->
-    <!--    <ng-template #suffixTemplate>-->
-    <!--      <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>-->
-    <!--    </ng-template>-->
-
-    <nz-form-item>
-      <nz-form-label  [nzSm]="6" [nzXs]="24" nzFor="checkPassword" nzRequired>Confirm Password</nz-form-label>
-      <nz-form-control  [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl">
-        <nz-input-group [nzSuffix]="suffixTemplate">
-          <input [type]="passwordVisible ? 'text' : 'password'" nz-input placeholder="input password" formControlName="checkPassword" id="checkPassword" />
-        </nz-input-group>
-        <ng-template #suffixTemplate #errorTpl let-control>
-          <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>
-          <ng-container *ngIf="control.hasError('required')">
-            Please confirm your password!
-          </ng-container>
-          <ng-container *ngIf="control.hasError('confirm')">
-            Two passwords that you enter is inconsistent!
-          </ng-container>
-        </ng-template>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="fullName" nzRequired>
-          <span>
-            Full Name
-            <i nz-icon nz-tooltip nzTooltipTitle="What do you want other to call you" nzType="question-circle" nzTheme="outline"></i>
-          </span>
-      </nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your full name!">
-        <input nz-input id="nickname" formControlName="fullName" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="role" nzRequired>Role</nz-form-label>
-      <nz-form-control [nzSm]="14"
-                       [nzXs]="24" [nzSpan]="12"  nzHasFeedback>
-        <nz-select formControlName="role" [ngModel]="'USER'">
-          <nz-option nzValue="AGENT" nzLabel="AGENT"></nz-option>
-          <nz-option nzValue="UNDERWRITER" nzLabel="UNDERWRITER"></nz-option>
-          <nz-option nzValue="ADMIN" nzLabel="ADMIN"></nz-option>
-        </nz-select>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label  [nzSm]="6" [nzXs]="24" nzFor="companyName" nzRequired>Company Name</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input company name!">
-        <input nz-input id="companyName" formControlName="companyName" placeholder="Company Name" />
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="name">Nom de Client</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Name Client is not valid E-mail!">
+        <input nz-input formControlName="name" id="name" />
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="validUntil" nzRequired>Valid until</nz-form-label>
-      <nz-form-control [nzSm]="18" [nzXs]="24" nzErrorTip="Please input validUntil!">
-        <nz-date-picker formControlName="validUntil"></nz-date-picker>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="cin">CIN</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Name Client is not valid E-mail!">
+        <input nz-input formControlName="cin" id="cin" />
       </nz-form-control>
     </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="tel">N¨ Telephone</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Telephone!">
+        <input nz-input formControlName="tel" id="tel" />
+      </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="dateDebut" nzRequired>Date Debut</nz-form-label>
+      <nz-form-control [nzSm]="18" [nzXs]="24" nzErrorTip="Please input dateDebut!">
+        <nz-date-picker  style="width: 100%" formControlName="dateDebut"></nz-date-picker>
+      </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="dateFin" nzRequired>Date Fin</nz-form-label>
+      <nz-form-control [nzSm]="18" [nzXs]="24" nzErrorTip="Please input dateFin!">
+        <nz-date-picker  style="width: 100%" formControlName="dateFin"></nz-date-picker>
+      </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="numberDay">Nombre de jours</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Telephone!">
+        <input nz-input formControlName="numberDay" id="numberDay" />
+      </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="total">Prix</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Telephone!">
+        <input nz-input formControlName="total" id="total" />
+      </nz-form-control>
+    </nz-form-item>
+
+
   </form>
 </nz-modal>
